--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
         secretName: *app
         usernameKey: NEXTCLOUD_ADMIN_USER
         passwordKey: NEXTCLOUD_ADMIN_PASSWORD
-        tokenKey: METRICS_TOKEN
+        tokenKey: NEXTCLOUD_METRICS_TOKEN
         smtpHostKey: SMTP_HOST
         smtpUsernameKey: SMTP_USERNAME
         smtpPasswordKey: SMTP_PASSWORD
@@ -231,7 +231,7 @@ spec:
       resources:
         requests:
           cpu: 200m
-          memory: 2Gi
+          memory: 512Mi
         limits:
           memory: 8Gi
       ingress:
@@ -301,10 +301,17 @@ spec:
         limits:
           memory: 128Mi
     metrics:
-      enabled: false
+      enabled: true
       https: true
+      token: ${NEXTCLOUD_METRICS_TOKEN}
       serviceMonitor:
-        enabled: false
+        enabled: true
+      resources:
+        requests:
+          cpu: 10m
+          memory: 24Mi
+        limits:
+          memory: 64Mi
     livenessProbe: *probes
     readinessProbe: *probes
     startupProbe: *startupProbe
