--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         # Nextcloud
         NEXTCLOUD_ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
         NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
-        METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
+        NEXTCLOUD_METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
         POSTGRES_HOST: &dbHost postgres16-rw.database.svc.cluster.local
         POSTGRES_DB: &dbName nextcloud
         POSTGRES_USER: &dbUser "{{ .NEXTCLOUD_POSTGRES_USER }}"
