--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -303,7 +303,7 @@ spec:
     metrics:
       enabled: true
       https: true # Will use http://nextcloud.self-hosted.svc.cluster.local:8080 during scrape.
-      server: nextcloud.${SECRET_DOMAIN}
+      server: https://nextcloud.${SECRET_DOMAIN}
       token: ${NEXTCLOUD_METRICS_TOKEN}
       serviceMonitor:
         enabled: true
