fix(nextcloud): enable prometheus and grafana for collabora

--- a/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud-helm/app/helmrelease.yaml
@@ -212,6 +212,12 @@ spec:
           secretName: *app
           usernameKey: COLLABORA_USERNAME
           passwordKey: COLLABORA_PASSWORD
+      grafana:
+        dashboards:
+          enabled: true
+      prometheus:
+        servicemonitor:
+          enabled: true
       probes:
         liveness: &probes
           enabled: true
