--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,11 +10,9 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  # - ./collabora/ks.yaml
   - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
-  # - ./nextcloud/ks.yaml
-  - ./nextcloud-helm/ks.yaml
+  - ./nextcloud/ks.yaml
   - ./searxng/ks.yaml
