--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/pvc
+    - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
@@ -25,9 +25,17 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      PVC_ACCESSMODES: ReadWriteOnce
-      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
-      PVC_CAPACITY: 5Gi
+      APP_UID: &uid "82"
+      APP_GID: *uid
+      VOLSYNC_CLAIM: *app
+      VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
+      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
+      VOLSYNC_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_CACHE_ACCESSMODES: *accessModes
+      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_CAPACITY: &capacity 5Gi
+      VOLSYNC_CACHE_CAPACITY: *capacity
+      VOLSYNC_TIME: "0 5 * * *"
   prune: true
   sourceRef:
     kind: GitRepository
